--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "seneca-transport",
   "version": "0.7.2",
   "description": "Seneca transport",
-  "main": "transport.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "./test.sh",
+    "test": "lab test/*.test.js -r console -v -L",
     "build": "./build.sh"
   },
   "repository": {
@@ -33,17 +33,21 @@
     "patrun": "0.4.3",
     "reconnect-net": "0.0.0"
   },
+  "devDependencies": {
+    "docco": "0.7.0",
+    "eslint-config-standard": "^4.4.0",
+    "eslint-plugin-standard": "^1.3.1",
+    "jshint": "2.8.0",
+    "lab": "^6.2.0",
+    "seneca": "plugin",
+    "seneca-transport-test": "0.1.3"
+  },
+  "peerDependencies" : {
+    "seneca" : "0.7.x"
+  },
   "files": [
     "README.md",
-    "LICENSE.txt",
-    "transport.js",
-    "lib/transport-utils.js"
-  ],
-  "devDependencies": {
-    "seneca": "plugin",
-    "docco": "0.7.0",
-    "jshint": "2.8.0",
-    "mocha": "2.1.0",
-    "seneca-transport-test": "0.1.3"
-  }
+    "LICENSE",
+    "lib"
+  ]
 }
